fix up the text wrap so that it doesn't totally blow.

--- a/css/thefrontside.less
+++ b/css/thefrontside.less
@@ -211,6 +211,7 @@ header {
   @code-border: #e5e8eb;
   @code-background: #f5f6f8;
   pre {
+    max-width: 475px;
     margin-top: 20px;
     border: 4px solid;
     border-color: @code-border;
